--- a/index.html
+++ b/index.html
@@ -726,6 +726,11 @@
                     title: "Why Monkeys are Healthy",
                     description: "Secretary of Health Robert F. Kennedy Jr. gives a detailed explanation of why monkeys are healthy"
                 },
+                {
+                    url: "https://www.youtube.com/embed/hcqCl6JhEKY",
+                    title: "Donald Trump Makes A Statement",
+                    description: "President of the United States talks about a recent event."
+                },
             ];
 
             const videoGrid = document.getElementById('videoGrid');
