--- a/index.html
+++ b/index.html
@@ -748,6 +748,11 @@
                     title: "Webpage Created",
                     details: "Even though Elon Musk didn't think that Donald Trump was a web-dev, he was."
                 },
+                {
+                    date: "April 2, 2025",
+                    title: "DOGE doing great as ever.",
+                    details: "DOGE, fantastic group, the best, they cut 2 billion dollars today, folks—tremendous savings, nobody does it better, believe me!"
+                },
             ];
 
             const newsTimeline = document.getElementById('newsTimeline');
