--- a/index.html
+++ b/index.html
@@ -691,6 +691,12 @@
                     image: "images/donald_trump.jpg"
                 },
                 {
+                    name: "JD Vance",
+                    title: "Vice President",
+                    bio: "A very important job, this role has.",
+                    image: "images/jd.jpg"
+                },
+                {
                     name: "Elon Musk",
                     title: "Head of the Department of Government Efficiency",
                     bio: "Cuts money. <strong>Chop chop</strong>",
