--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
                     name: "JD Vance",
                     title: "Vice President",
                     bio: "A very important job, this role has.",
-                    image: "images/jd.jpg"
+                    image: "images/JD.jpg"
                 },
                 {
                     name: "Elon Musk",
