--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
                 {
                     name: "JD Vance",
                     title: "Vice President",
-                    bio: "A very important job, this role has.",
+                    bio: "Has a very important role.",
                     image: "images/JD.jpg"
                 },
                 {
